<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewPlace">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_PlaceName"
        android:textSize="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <EditText
        android:id="@+id/et_PlaceName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/et_PlaceStr"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:textSize="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/et_PlaceName" />

    <Button
        android:id="@+id/btn_ScanQRCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_ScanQRCode"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/et_PlaceStr"/>

    <Button
        android:id="@+id/btn_SendSMS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_SendSMS"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_ScanQRCode"/>

    <Button
        android:id="@+id/btn_SavePlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_SavePlace"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_DeletePlace" />

    <Button
        android:id="@+id/btn_DeletePlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_DeletePlace"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_CancelEdit" />

    <Button
        android:id="@+id/btn_CancelEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_CancelPlace"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>